After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788078 - Memory Leak
Memory Leak
Status: RESOLVED FIXED
Product: metacity
Classification: Other
Component: general
3.25.x
Other Linux
: Normal major
: ---
Assigned To: Metacity maintainers list
Metacity maintainers list
Depends on:
Blocks:
 
 
Reported: 2017-09-23 16:03 UTC by Zack
Modified: 2017-09-29 22:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Zack 2017-09-23 16:03:38 UTC
Every theme switching makes memory leak worse, even back and forth between  two themes, independent of different themes. 
Running metacity --replace "fixes" it.
Comment 1 André Klapper 2017-09-23 16:41:34 UTC
Please provide steps to reproduce (how was this exactly measured) and if possible a valgrind log. Also, which exact version is this about?