ui: fix memory leak when changing theme

g_set_object increments reference count of new_object.

https://bugzilla.gnome.org/show_bug.cgi?id=788078